testsuite/tests/rename/should_fail/T12488a.hs
{-# LANGUAGE ExplicitNamespaces #-}
module T12488a
  ( T (type A)
  , (:!) (type (:/))
  ) where

data T = A

data (:!) = (:/)